--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Log in with your account</title>
+    <title>Admin panel</title>
 </head>
 <style>
     table {
@@ -20,7 +20,7 @@
     }
 </style>
 <body>
-<h1>Product list</h1>
+<h1>User list</h1>
 <table>
     <tr>
         <th>ID</th>
