--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -17,7 +17,11 @@
     </div>
     <div>
         <label for="roles">Roles:</label>
-        <input type="text" id="roles" th:field="*{roles}" />
+        <input type="text" id="roles" th:field="*{role}" />
+    </div>
+    <div>
+        <label for="roles">Password:</label>
+        <input type="text" id="password" th:field="*{password}" />
     </div>
     <button type="submit">Update</button>
 </form>
