--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -20,6 +20,10 @@
     <label for="role">Role:</label>
     <input type="text" id="role" name="role" />
   </div>
+  <div>
+    <label for="password">Password:</label>
+    <input type="text" id="password" name="password" />
+  </div>
   <input type="submit" />
 </form>
 </body>
