--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,6 +26,7 @@
         <th>ID</th>
         <th>UserName</th>
         <th>Surname</th>
+        <th>Password</th>
         <th>Roles</th>
         <th>Actions</th>
     </tr>
@@ -33,7 +34,8 @@
         <td th:text="${user.id}"></td>
         <td th:text="${user.name}"></td>
         <td th:text="${user.surname}"></td>
-        <td th:text="${#strings.listJoin(user.roles, ', ')}"></td>
+        <td th:text="${user.password}"></td>
+        <td th:text="${user.role}"></td>
         <td>
             <div style="display: flex; gap: 10px; justify-content: center">
                 <form th:action="@{/admin/delete/{id}(id=${user.id})}" method="post">
