--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -20,7 +20,7 @@
         <input type="text" id="roles" th:field="*{role}" />
     </div>
     <div>
-        <label for="roles">Password:</label>
+        <label for="password">Password:</label>
         <input type="text" id="password" th:field="*{password}" />
     </div>
     <button type="submit">Update</button>
