--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -6,17 +6,19 @@
 </head>
 <style>
     table {
-        width: 100%; /* Занимает всю ширину родительского элемента */
-        border-collapse: collapse; /* Убирает двойные границы между ячейками */
+        width: 100%;
+        border-collapse: collapse;
     }
+
     th, td {
-        padding: 8px; /* Отступы внутри ячеек */
-        text-align: center; /* Выравнивание текста по левому краю */
-        border: 1px solid #ddd; /* Граница ячеек */
-        white-space: wrap; /* Запрет на перенос строк */
+        padding: 8px;
+        text-align: center;
+        border: 1px solid #ddd;
+        white-space: wrap;
     }
+
     th {
-        background-color: #f2f2f2; /* Цвет фона заголовков */
+        background-color: #f2f2f2;
     }
 </style>
 <body>
@@ -49,7 +51,7 @@
     </tr>
 </table>
 <form th:action="@{/admin/addUser}" method="get">
-    <button type="submit" name="add" th:text="'Add User'">Add USer</button>
+    <button type="submit" name="add" th:text="'Add User'">Add User</button>
 </form>
 </body>
 </html>
