--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -6,6 +6,7 @@
     <title>Product Management</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
+<!--  лучше вынести это в CSS файлы      -->
         body {
             display: flex;
             height: 100vh;
