--- a/src/main/resources/templates/return.html
+++ b/src/main/resources/templates/return.html
@@ -75,8 +75,9 @@
             alert('Please, select date.');
             return;
         }
+        const url = `/api/sales?date=${encodeURIComponent(selectedDate)}`;
 
-        fetch(`/api/sales/${selectedDate}`, {
+        fetch(url, {
             method: 'GET',
             headers: {
                 'Content-Type': 'application/json',
